# test-t-x7

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  TA.md  package.json
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/agents/: optimizer.py  planner.py
backend/app/api/: campaigns.py  metrics.py  plans.py
backend/app/mappers/: amazon.py  google.py  meta.py
backend/app/mocks/: _base.py  amazon.py  google.py  meta.py
backend/app/rag/: platform_policies.md  retriever.py
backend/app/reporting/: aggregator.py
frontend/: package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/CreateCampaign/: InputForm.tsx  Modal.tsx  PlanPreview.tsx
frontend/src/components/Dashboard/: CampaignTable.tsx  Filters.tsx  index.tsx
frontend/src/components/Optimization/: SuggestionCard.tsx
frontend/src/hooks/data/: index.ts  useCampaigns.ts  useGeneratePlan.ts  useMetrics.ts  useSuggestions.ts
frontend/src/lib/: axiosClient.ts
frontend/src/repository/: campaigns.ts  index.ts  metrics.ts  plans.ts
frontend/src/types/: index.ts
shared/models/: __init__.py  campaign.py  metrics.py  plan.py
shared/scripts/: generate_types.py
